2022-10-26 1. TabLayout 추가 -> 실시간 리스트 & 보관 리스트 2. 위젯코드 제거

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">뉴스 크롤링</string>
+    <string name="bottom_label">Version 1.0.1\n https://github.com/tekken5953/WebCrollingExample.git</string>
 </resources>
